--- a/finished/3_with_signal_server/index.html
+++ b/finished/3_with_signal_server/index.html
@@ -1,41 +1,41 @@
 <body>
-  <video id="remote" autoplay controls></video>
+  <video id="remote" controls></video>
   
   <script src="signalobject.js"></script>
   <script>
     // get video elements
     const remote = document.querySelector("video#remote");
-    let remotePC;
+    let peerConnection;
 
     const signalingObject = new SignalServer("stream-video");
     signalingObject.onmessage = e => {
       if (e.data.type === "icecandidate") {
-        remotePC?.addIceCandidate(e.data.candidate)
+        peerConnection?.addIceCandidate(e.data.candidate);
       } else if (e.data.type === "offer") {
-        console.log("Received offer")
-        handleOffer(e.data)
+        console.log("Received offer");
+        handleOffer(e.data);
       }
     }
 
     function handleOffer(offer) {
-      remotePC = new RTCPeerConnection();
-      remotePC.addEventListener("track", e => remote.srcObject = e.streams[0]);
-      remotePC.addEventListener("icecandidate", e => {
+      peerConnection = new RTCPeerConnection();
+      peerConnection.addEventListener("track", e => remote.srcObject = e.streams[0]);
+      peerConnection.addEventListener("icecandidate", e => {
         let candidate = null;
         if (e.candidate !== null) {
           candidate = {
             candidate: e.candidate.candidate,
             sdpMid: e.candidate.sdpMid,
             sdpMLineIndex: e.candidate.sdpMLineIndex,
-          }
+          };
         }
-        signalingObject.postMessage({ type: "icecandidate", candidate })
+        signalingObject.postMessage({ type: "icecandidate", candidate });
       });
-      remotePC.setRemoteDescription(offer)
-        .then(() => remotePC.createAnswer())
+      peerConnection.setRemoteDescription(offer)
+        .then(() => peerConnection.createAnswer())
         .then(async answer => {
-          await remotePC.setLocalDescription(answer);
-          console.log("Created answer, sending...")
+          await peerConnection.setLocalDescription(answer);
+          console.log("Created answer, sending...");
           signalingObject.postMessage({
             type: "answer",
             sdp: answer.sdp,
