changed script to signalserverclass.js

--- a/finished/3_with_signal_server/streamer.html
+++ b/finished/3_with_signal_server/streamer.html
@@ -3,7 +3,7 @@
   <button onclick="start(this)">start video</button>
   <button id="stream" onclick="stream(this)" disabled>stream video</button>
 
-  <script src="signalobject.js"></script>         <!-- new change -->
+  <script src="signalserverclass.js"></script>         <!-- new change -->
   <script>
     const local = document.querySelector("video#local");
     let peerConnection;
