--- a/finished-tutorial/3_with_signal_server/index.html
+++ b/finished-tutorial/3_with_signal_server/index.html
@@ -1,7 +1,7 @@
 <body>
   <video id="remote" controls></video>
   
-  <script src="signalserverclass.js"></script>          <!-- new change -->
+  <script src="/3_with_signal_server/signalserverclass.js"></script>          <!-- new change -->
   <script>
     const remote = document.querySelector("video#remote");
     let peerConnection;
@@ -17,9 +17,7 @@
     }
 
     function handleOffer(offer) {
-      const config = {
-        iceServers: [{ url: "stun:stun.1.google.com:19302" }]
-      };
+      const config = {};
       peerConnection = new RTCPeerConnection(config);
       peerConnection.addEventListener("track", e => remote.srcObject = e.streams[0]);
       peerConnection.addEventListener("icecandidate", e => {
