--- a/finished-tutorial/2_within_browser_across_pages/streamer.html
+++ b/finished-tutorial/2_within_browser_across_pages/streamer.html
@@ -30,9 +30,7 @@
     function stream(e) {
       e.disabled = true;
 
-      const config = {
-        iceServers: [{ url: "stun:stun.1.google.com:19302" }]
-      };
+      const config = {};
       peerConnection = new RTCPeerConnection(config);  // local peer connection
 
       // add ice candidate event listener
