renamed index to client.html for better script imports

--- a/finished-tutorial/index.html
+++ b/finished-tutorial/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li><a href="1_within_a_page">1_within_a_page</a></li>
             <li><a href="2_within_browser_across_pages">2_within_browser_across_pages</a> | <a href="2_within_browser_across_pages/streamer.html">streamer page</a></li>
-            <li><a href="3_with_signal_server">3_with_signal_server</a> | <a href="3_with_signal_server/streamer.html">streamer page</a></li>
+            <li><a href="3_with_signal_server/client.html">3_with_signal_server</a> | <a href="3_with_signal_server/streamer.html">streamer page</a></li>
         </ul>
     </body>
 </html>
