--- a/finished-tutorial/3_with_signal_server/client.html
+++ b/finished-tutorial/3_with_signal_server/client.html
@@ -1,7 +1,7 @@
 <body>
   <video id="remote" controls></video>
   
-  <script src="/3_with_signal_server/signalserverclass.js"></script>          <!-- new change -->
+  <script src="./signalserverclass.js"></script>          <!-- new change -->
   <script>
     const remote = document.querySelector("video#remote");
     let peerConnection;
